🐞 scroll causing layout shift issue fixed

--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,11 @@
   color: #213547;
   background-color: #ffffff;
 }
+html {
+  scrollbar-width: thin;
+  scrollbar-color: #1a1a1a #ffffff;
+  scroll-behavior: smooth;
+}
 #root {
   width: 100%;
   margin: 0 auto;
@@ -40,8 +45,9 @@ a:hover {
 body {
   margin: 0;
   display: flex;
-  place-items: center;
-  width: 100%;
+  width: 100vw;
+  overflow-y: auto;
+  overflow-x: hidden;
 }
 .unstyled-button {
   @apply border-none bg-none p-0 text-inherit cursor-pointer active:border-none active:outline-none focus:outline-none;
